--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -272,6 +272,7 @@
           "proportional_function": "Algorithme",
           "opening_threshold_degree": "Seuil d'ouverture",
           "min_opening_degrees": "Ouvertures minimales",
+          "max_opening_degree": "Degré d'ouverture maximum",
           "max_closing_degree": "Fermetures maximale"
         },
         "data_description": {
@@ -281,6 +282,7 @@
           "proportional_function": "Algorithme à utiliser (seulement TPI est disponible)",
           "opening_threshold_degree": "Seuil d'ouverture la vanne en dessous de laquelle la vanne est considérée comme devant être fermée (et alors 'max_closing_degree' s'appliquera)",
           "min_opening_degrees": "Ouverture minimale pour chaque vanne considérée comme chauffante, séparée par des virgules. Par défaut à 0. Exemple : 20, 25, 30",
+          "max_opening_degree": "Degré d'ouverture maximum. La vanne ne s'ouvrira jamais plus que cette valeur",
           "max_closing_degree": "Fermeture maximale. La vanne ne sera jamais fermée au-delà de cette valeur. Mettez à 100 pour fermer complètement la vanne"
         }
       },
@@ -646,6 +648,7 @@
           "proportional_function": "Algorithme",
           "opening_threshold_degree": "Seuil d'ouverture",
           "min_opening_degrees": "Ouvertures minimales",
+          "max_opening_degree": "Ouverture maximale",
           "max_closing_degree": "Fermetures maximale"
         },
         "data_description": {
@@ -655,6 +658,7 @@
           "proportional_function": "Algorithme à utiliser (seulement TPI est disponible)",
           "opening_threshold_degree": "Seuil d'ouverture la vanne en dessous de laquelle la vanne est considérée comme devant être fermée (et alors 'max_closing_degree' s'appliquera)",
           "min_opening_degrees": "Ouverture minimale pour chaque vanne considérée comme chauffante, séparée par des virgules. Par défaut à 0. Exemple : 20, 25, 30",
+          "max_opening_degree": "Degré d'ouverture maximum. La vanne ne s'ouvrira jamais plus que cette valeur",
           "max_closing_degree": "Fermeture maximale. La vanne ne sera jamais fermée au-delà de cette valeur. Mettez à 100 pour fermer complètement la vanne"
         }
       },
