--- a/custom_components/versatile_thermostat/translations/ru.json
+++ b/custom_components/versatile_thermostat/translations/ru.json
@@ -261,14 +261,20 @@
           "opening_degree_entity_ids": "Сущности степени открытия",
           "closing_degree_entity_ids": "Сущности степени закрытия",
           "proportional_function": "Алгоритм",
-          "min_opening_degrees": "Минимальные степени открытия"
+          "opening_threshold_degree": "Пороговое значение открытия",
+          "min_opening_degrees": "Минимальные степени открытия",
+          "max_opening_degree": "Максимальная степень открытия",
+          "max_closing_degree": "Максимальная степень закрытия"
         },
         "data_description": {
           "offset_calibration_entity_ids": "Список сущностей 'калибровки смещения'. Установите, если ваш TRV имеет такую сущность для лучшего регулирования. Должна быть одна для каждой управляющей климатической сущности",
           "opening_degree_entity_ids": "Список сущностей 'степени открытия'. Должна быть одна для каждой управляющей климатической сущности",
           "closing_degree_entity_ids": "Список сущностей 'степени закрытия'. Установите, если ваш TRV имеет такую сущность для лучшего регулирования. Должна быть одна для каждой управляющей климатической сущности",
           "proportional_function": "Алгоритм для использования (TPI пока единственный)",
-          "min_opening_degrees": "Минимальное значение степени открытия для каждого управляющего устройства, через запятую. По умолчанию 0. Пример: 20, 25, 30"
+          "opening_threshold_degree": "Значение открытия клапана, ниже которого клапан должен считаться закрытым (и тогда будет применено 'max_closing_degree')",
+          "min_opening_degrees": "Минимальное значение степени открытия для каждого управляющего устройства, через запятую. По умолчанию 0. Пример: 20, 25, 30",
+          "max_opening_degree": "Максимальное значение степени открытия. Клапан никогда не откроется больше этого значения",
+          "max_closing_degree": "Максимальное значение степени закрытия. Клапан никогда не закроется больше этого значения. Установите на 100, чтобы полностью закрыть клапан"
         }
       },
       "sync_device_internal_temp": {
@@ -562,14 +568,20 @@
           "opening_degree_entity_ids": "Сущности степени открытия",
           "closing_degree_entity_ids": "Сущности степени закрытия",
           "proportional_function": "Алгоритм",
-          "min_opening_degrees": "Минимальные степени открытия"
+          "opening_threshold_degree": "Пороговое значение открытия",
+          "min_opening_degrees": "Минимальные степени открытия",
+          "max_opening_degree": "Максимальная степень открытия",
+          "max_closing_degree": "Максимальная степень закрытия"
         },
         "data_description": {
           "offset_calibration_entity_ids": "Список сущностей 'калибровки смещения'. Установите, если ваш TRV имеет такую сущность для лучшего регулирования. Должна быть одна для каждой управляющей климатической сущности",
           "opening_degree_entity_ids": "Список сущностей 'степени открытия'. Должна быть одна для каждой управляющей климатической сущности",
           "closing_degree_entity_ids": "Список сущностей 'степени закрытия'. Установите, если ваш TRV имеет такую сущность для лучшего регулирования. Должна быть одна для каждой управляющей климатической сущности",
           "proportional_function": "Алгоритм для использования (TPI пока единственный)",
-          "min_opening_degrees": "Минимальное значение степени открытия для каждого управляющего устройства, через запятую. По умолчанию 0. Пример: 20, 25, 30"
+          "opening_threshold_degree": "Значение открытия клапана, ниже которого клапан должен считаться закрытым (и тогда будет применено 'max_closing_degree')",
+          "min_opening_degrees": "Минимальное значение степени открытия для каждого управляющего устройства, через запятую. По умолчанию 0. Пример: 20, 25, 30",
+          "max_opening_degree": "Максимальное значение степени открытия. Клапан никогда не откроется больше этого значения",
+          "max_closing_degree": "Максимальное значение степени закрытия. Клапан никогда не закроется больше этого значения. Установите на 100, чтобы полностью закрыть клапан"
         }
       },
       "sync_device_internal_temp": {
